add script ViveBio.sql

--- a/site_ViveBio/src/views/partials/header.ejs
+++ b/site_ViveBio/src/views/partials/header.ejs
@@ -36,7 +36,7 @@
                                 <% }else{ %>
                                     <li><a href="/products/all">Productos</a></li>
                                     <% }%>
-                                        <li><a href="">Quienes somos</a></li>
+                                        <li><a href="/about">Quiénes somos</a></li>
                                         <li><a href="">Contacto</a></li>
                         </ul>
         </div>
