--- a/site_ViveBio/public/css/home.css
+++ b/site_ViveBio/public/css/home.css
@@ -147,7 +147,10 @@ Carrusel
 
 .slide {
     width: 20%;
-    transition: 2s;
+    transition-property: all;
+    transition-duration: 3s;
+    transition-delay: 2s;
+    transition-timing-function: cubic-bezier(.39,.58,.57,1);
 }
 
 .navigation-manual {
