--- a/site_ViveBio/src/views/about.ejs
+++ b/site_ViveBio/src/views/about.ejs
@@ -7,31 +7,78 @@
         <%- include('./partials/header') %>
 
         <main>
-        <section>
-            <article>
-                <h3>Un gran paso, una huella pequeña</h3>      
-
-                <p>
-                    Somos parte de la comunidad consciente del mundo, que reconoce que lograr un mejor futuro depende de nuestras decisiones individuales 
-                    y de todo el esfuerzo en conjunto.
-                    Desde nuestro cultivo ubicado en Rodriguez, prov. de Bs As., vemos a la Tierra concebir todas nuestras materias primas. Nos obsequia su medicina cual madre amorosa, y 
-                    nosotros asumimos la responsabilidad y el honor de cuidar su bienestar en todo el proceso productivo. 
-                </p>
-
-                <img src="/images/945f5e5192bb476609e701238335543f.jpg" alt="">
-
-            </article>
-
-            <article>
-                <img src="/images/nosotros 1.jpg" alt="">
-                <div class="icons">
-                    
-                    <img src="/images/icono1.jpg" alt="">
-                    <img src="/images/icono2.jpg" alt="">
-                    <img src="/images/icono3.jpg" alt="">
-                    <img src="/images/icono4.jpg" alt="">
-                </div>  
-            </article>
+        <section class="container">
+            <ul id="categories" class="clr">
+                <li class="pusher"></li>
+                  <li>
+                    <div>
+                      <img src="/images/945f5e5192bb476609e701238335543f.jpg" alt=""/>
+                      <h1>Cultivo responsable</h1>
+                      <p>Desde Rodriguez, prov. de Bs As., vemos a la Tierra concebir todas nuestras materias primas.</p>
+                  </div>
+                </li>
+                  <li>
+                    <div>
+                      <img src="/images/background_nnnn.jpg" alt=""/>
+                      <h1>Un gran paso, una huella pequeña</h1>
+                      <p>Asumimos el desafío de transmitir la sabiduría que vive en las plantas.</p>
+                  </div>
+                </li>
+                <li>
+                    <div>
+                      <img src="/images/margaritas.jpg" alt=""/>
+                      <h1>Vitalidad</h1>
+                      <p>En nuestras plantaciones, la vida crea ciclos infinitos.</p>
+                  </div>
+                </li>
+                <li>
+                    <div>
+                      <img src="/images/packaging.jpg"  alt=""/>
+                      <h1>Packaging</h1>
+                      <p>Procuramos la conservación del producto, como del medioambiente.</p>
+                  </div>
+                </li>
+                <li class="pusher"></li>
+                <li class="pusher"></li>
+                <li>
+                    <div>
+                      <img src="/images/nosotros 1.jpg"  alt=""/>
+                      <h1>Somos parte del todo</h1>
+                      <p>Somos parte de la comunidad que elige consumir de manera consciente.</p>
+                  </div>
+                </li>
+                <li class="pusher"></li>
+                <li>
+                    <div>
+                      <img src="/images/icono1.jpg" alt=""/>
+                      <h1>Sólo amor</h1>
+                      <p>Apoyamos las causas que buscan prohibir las pruebas en animales.</p>
+                  </div>
+                </li>
+                <li>
+                    <div>
+                      <img src="/images/icono2.jpg" alt=""/>
+                      <h1>Orgánicos</h1>
+                      <p>Todo el proceso productivo cumple extrictamente con nuestra visión ecológica.</p>
+                  </div>
+                </li>
+                <li>
+                    <div>
+                      <img src="/images/icono3.jpg" alt=""/>
+                      <h1>¡Libres!</h1>
+                      <p>No contiene químicos tóxicos para tu cuerpo y la Naturaleza.</p>
+                  </div>
+                </li>
+                <li class="pusher"></li>
+                <li class="pusher"></li>
+                <li>
+                    <div>
+                      <img src="/images/icono4.jpg" alt=""/>
+                      <h1>Artesanales</h1>
+                      <p>Hechos con nuestras manos, creados con amor.</p>
+                  </div>
+                </li>
+  </ul>              
 
         </section>
         </main>
