add schema and data with category description & image

--- a/site_ViveBio/src/views/about.ejs
+++ b/site_ViveBio/src/views/about.ejs
@@ -21,7 +21,7 @@
                     <div>
                       <img src="/images/background_nnnn.jpg" alt=""/>
                       <h1>Un gran paso, una huella pequeña</h1>
-                      <p>Asumimos el desafío de transmitir la sabiduría que vive en las plantas.</p>
+                      <p>Hace 15 años asumimos el desafío y honor, de transmitir la sabiduría que vive en las plantas.</p>
                   </div>
                 </li>
                 <li>
