--- a/site_ViveBio/src/views/partials/header.ejs
+++ b/site_ViveBio/src/views/partials/header.ejs
@@ -100,7 +100,7 @@
                     <ul>
                         <li><a href="/">Home</a></li>
                         <li><a href="/products/all">Productos</a></li>
-                        <li><a href="">Quiénes somos</a></li>
+                        <li><a href="/about">Quiénes somos</a></li>
                         <li><a href="">Contacto</a></li>
                     </ul>
                 </div>
