--- a/site_ViveBio/src/views/products/all.ejs
+++ b/site_ViveBio/src/views/products/all.ejs
@@ -163,8 +163,7 @@
             <div class="box">
               <div class="content">
                 <p id="spa">
-                  Nuestro tiempo de relax, significa conectar con nuestra esencia. Un momento para vivir y celebrar
-                  nuestra mejor versión. BioSpa es pureza, bienestar, equilibrio.
+                  Nuestro tiempo de relax, significa conectar con nuestra esencia. Un momento para vivir y celebrar nuestra mejor versión. BioSpa es pureza, bienestar, equilibrio.
                 </p>
               </div>
               <div class="image">
