--- a/site_ViveBio/src/views/users/login.ejs
+++ b/site_ViveBio/src/views/users/login.ejs
@@ -36,7 +36,7 @@
                         <h1>Login</h1>
                         <div class="login_box-gf">
                             <div class="login_google">
-                                <button type="submit"><i class="fab fa-google-plus"></i></button>
+                                <button type="submit"><i class="fab fa-google-plus" id="btnSingGoogle"></i></button>
                             </div>
                             <div class="login_facebook">
                                 <button type="submit"><i class="fab fa-facebook"></i></button>
@@ -75,5 +75,7 @@
                     </section>
         </main>
         <script src="/javascript/login.js"></script>
+        <script src="/javascript/loginGoogle.js"></script>
+        <script src=""></script>
     </body>
 </html>
