--- a/site_ViveBio/src/views/products/edit.ejs
+++ b/site_ViveBio/src/views/products/edit.ejs
@@ -101,7 +101,7 @@
                             <div class="register_center">
                                 <div class="add_button">
                                     <button type="submit">Actualizar</button>
-                                    <button type="reset">Limpiar</button>
+                                    <button type="reset">Resetear</button>
                                 </div>
                             </div>
                         </form>
