--- a/site_ViveBio/src/views/products/list.ejs
+++ b/site_ViveBio/src/views/products/list.ejs
@@ -6,19 +6,22 @@
     <body class="home">
         <%- include('../partials/header') %>
             <main class="list">
-                <% if (userLogin.rol == "moderator") { %>
+                <div class="list__container__options">
+                    <div class="list__options_top" ><a href="/products/add">Crear Producto</a></div>
+                    <div class="list__options_top" ><a href="/Category/add">Crear Categoria</a></div>
                     <div class="select__list">
                         <select>
                             <option class="products__list" value="1" default>Productos</option>
-                            <option class="users__list" value="2">Usuarios</option>
-                            <option class="categories__list" value="3">categorias</option>
+                            <% if (userLogin.rol=="moderator" ) { %>
+                                <option class="users__list" value="2">Usuarios</option>
+                                <% } %>
+                                    <option class="categories__list" value="3">categorias</option>
                         </select>
                         <i></i>
                     </div>
-                <% } %>
-                <div class="list__container" <% if (userLogin.rol == "admin") { %>
-                    style="margin-top:85px;"
-                <% } %>>
+                </div>
+                    
+                <div class="list__container">
                     <div class="list__top">
                         <div class="list__cates">
                             <div class="list__cates1">
@@ -26,7 +29,8 @@
                                 <a class="list__cate" style="cursor: pointer;" onclick="changeproduct(1)">BioCapilar</a>
                             </div>
                             <div class="list__cates2">
-                                <a class="list__cate" style="cursor: pointer;" onclick="changeproduct(2)">BioCorporal</a>
+                                <a class="list__cate" style="cursor: pointer;"
+                                    onclick="changeproduct(2)">BioCorporal</a>
                                 <a class="list__cate" style="cursor: pointer;" onclick="changeproduct(3)">BioSpa</a>
                             </div>
 
