about desktop ok

--- a/site_ViveBio/public/css/about.css
+++ b/site_ViveBio/public/css/about.css
@@ -6,7 +6,13 @@
 
   .about .container{
     padding: 30px; 
+    border: 1px solid var(--verdeFuerte);
+    box-shadow: 2px 2px 10px 2px aquamarine;
+    margin: 30px;
+    border-radius: 20px;
+    background-color: #ffffff91;
   }
+
   #categories{
     overflow:hidden;
     width:90%;
@@ -39,9 +45,6 @@
   #categories li:nth-child(6n+4), #categories li:nth-child(6n+5), #categories li:nth-child(6n+6) {
       margin-top: -6.9285714285%;
     margin-bottom: -6.9285714285%;
-    
-    -webkit-transform: translateX(50%) rotate(-60deg) skewY(30deg);
-    -ms-transform: translateX(50%) rotate(-60deg) skewY(30deg);
     transform: translateX(50%) rotate(-60deg) skewY(30deg);
   }
   #categories li:nth-child(6n+4):last-child, #categories li:nth-child(6n+5):last-child, #categories li:nth-child(6n+6):last-child{
@@ -57,12 +60,8 @@
     text-align:center;
     color:#fff;
     overflow:hidden;
-    
-    -webkit-transform: skewY(-30deg) rotate(60deg);
-    -ms-transform: skewY(-30deg) rotate(60deg);
     transform: skewY(-30deg) rotate(60deg);
-    
-      -webkit-backface-visibility:hidden;
+    backface-visibility:hidden;
     
   }
   
@@ -79,23 +78,19 @@
   #categories div h1, #categories div p{
     width:90%;
     padding:0 5%;
-    background-color:#008080; background-color: rgba(0, 128, 128, 0.8);
-    font-family: 'Raleway', sans-serif;
-    
-    -webkit-transition: top .2s ease-out, bottom .2s ease-out, .2s padding .2s ease-out;
-    -ms-transition: top .2s ease-out, bottom .2s ease-out, .2s padding .2s ease-out;
+    background-color: rgba(0, 128, 128, 0.8);
     transition: top .2s ease-out, bottom .2s ease-out, .2s padding .2s ease-out;
   }
   #categories li h1{
     bottom:110%;
-    font-style:italic;
     font-weight:normal;
-    font-size:1.5em;
+    font-size:1.2em;
     padding-top:100%;
     padding-bottom:100%;
   }
+
   #categories li h1:after{
-      content:'';
+    content:'';
     display:block;
     position:absolute;
     bottom:-1px; left:45%;
@@ -138,6 +133,7 @@
     transition: color .5s;
     overflow:hidden;
   }
+  
   #fork:before {
     content: '';
     position: absolute;
