arreglo de rutas

--- a/site_ViveBio/src/views/category/edit.ejs
+++ b/site_ViveBio/src/views/category/edit.ejs
@@ -7,7 +7,7 @@
                 <main>
                     <section class="add_container">
                         <h3>Editar Categoría</h3>
-                        <form action="/products/update/<%= category.id %>?_method=PUT" class="categoryEdit" method="POST"
+                        <form action="/category/update/<%= category.id %>?_method=PUT" class="categoryEdit" method="POST"
                             enctype="multipart/form-data">
                             <article class="camps_container">
                                 <div class="sub_container">
