--- a/site_ViveBio/src/views/partials/header.ejs
+++ b/site_ViveBio/src/views/partials/header.ejs
@@ -32,7 +32,7 @@
                         <ul class="menu">
                             <li><a href="/">Home</a></li>
                             <% if (locals.userLogin && (userLogin.rol=="admin" || userLogin.rol == "moderator") ) { %>
-                                <li><a href="/products/list/0">lista</a></li>
+                                <li><a href="/products/list">lista</a></li>
                                 <% }else{ %>
                                     <li><a href="/products/all">Productos</a></li>
                                     <% }%>
@@ -51,7 +51,7 @@
             <div class="nav_options-emergente">
                 <% if (locals.userLogin && (userLogin.rol=="admin" || userLogin.rol == "moderator") ) { %>
                     <a href="/products/add" title="Añadir producto"><i class="fa-solid fa-plus"></i></a>
-                    <a href="/products/list/0"><i class="fas fa-user-cog"
+                    <a href="/products/list"><i class="fas fa-user-cog"
                             title="Configuraciones de Administrador"></i></a>
                     <% } %>
                         <a href="#"><i class="fa-solid fa-bell" title="Notificaciones"></i></a>
@@ -107,7 +107,7 @@
                 <div class="header__iconos">
                     <% if (locals.userLogin) { %>
                         <% if (locals.userLogin && (userLogin.rol=="admin" || userLogin.rol=="moderator") ) { %>
-                            <a href="/products/list/0"><i class="fas fa-user-cog"
+                            <a href="/products/list"><i class="fas fa-user-cog"
                                     title="Configuraciones de Administrador"></i></a>
                             <% } %>
                                 <% } %>
