--- a/site_ViveBio/src/views/error.ejs
+++ b/site_ViveBio/src/views/error.ejs
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -24,12 +24,12 @@
                             </div>
                             <div class="contant_box_404">
                                 <h3>
-                                    We're lost!
+                                    Oops, nos perdimos!!
                                 </h3>
 
-                                <p>The page you are looking for not avaible!</p>
+                                <p>La página que estás buscando, no está disponible!</p>
 
-                                <a href="/" class="link_404">Go to Home</a>
+                                <a href="/" class="link_404">Home</a>
 
                             </div>
                         </div>
@@ -39,7 +39,7 @@
         </section>
 
     </main>
-</body>  -->
+</body> 
 
 <h1><%= message %></h1>
 <h2><%= error.status %></h2>
