--- a/site_ViveBio/src/views/partials/header.ejs
+++ b/site_ViveBio/src/views/partials/header.ejs
@@ -101,7 +101,7 @@
                         <li><a href="/">Home</a></li>
                         <li><a href="/products/all">Productos</a></li>
                         <li><a href="/about">Quiénes somos</a></li>
-                        <li><a href="">Contacto</a></li>
+                        <li><a href="/contact">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="header__iconos">
