--- a/site_ViveBio/src/views/products/card.ejs
+++ b/site_ViveBio/src/views/products/card.ejs
@@ -154,6 +154,7 @@
         </section>
       </main>
       <%- include('../partials/footer') %>
+      <script src="/javascript/deteleProduct.js"></script>
         <script src="/javascript/card.js"></script>
   </body>
 
