--- a/site_ViveBio/public/css/all.css
+++ b/site_ViveBio/public/css/all.css
@@ -8,6 +8,8 @@
     margin: 70px 30px;
     border-radius: 20px;
     box-shadow: 2px 2px 5px 5px var(--aquamarine);
+    background-color: #ffffff9c;
+    backdrop-filter: blur(2px);
 }
 
 
